--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,18 @@
     <string name="title_activity_search">SearchActivity</string>
 
     <!-- Register Activity -->
-    <string name = "txt_first_name">First Name</string>
-    <string name = "txt_last_name">Last Name</string>
-    <string name = "txt_email_id">Email ID</string>
-    <string name = "txt_password">Password</string>
-    <string name = "txt_contact_no">Contact Number</string>
+    <string name="txt_first_name">First Name</string>
+    <string name="txt_last_name">Last Name</string>
+    <string name="txt_email_id">Email ID</string>
+    <string name="txt_password">Password</string>
+    <string name="txt_contact_no">Contact Number</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="custom_title_left" />
+    <string name="custom_title_name" />
+    <string name="custom_title_fname" />
 
 </resources>
