Registeration Activity (backend) GPS Landing page (ListView) Book Details Page(Single List View)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="custom_title_fname" />
     <string name="hello_world">Hello world!</string>
     <string name="imgdesc">imgdesc</string>
+    <string name="title_activity_bookDetails" />
 
     <string-array name="Planets">
         <item>Sun</item>
