--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,4 +164,8 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="search_label">search_label</string>
+    <string name="search_result">search_result</string>
+    <string name="search_hint">search_hint</string>
+    <string name="search_label1">search_label1</string>
 </resources>
