--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,9 +101,9 @@
     <string name="time_current">The Time is:</string>
 
 
-        <string name="title_activity_main">Ahotbrew.com TimePicker</string>
+    <string name="title_activity_main">Ahotbrew.com TimePicker</string>
 
-        <string name="pick_time">Open Time Picker</string>
+    <string name="pick_time">Open Time Picker</string>
 
     <string name="title_activity_book_details">BookDetails</string>
 
@@ -168,4 +168,7 @@
     <string name="search_result">search_result</string>
     <string name="search_hint">search_hint</string>
     <string name="search_label1">search_label1</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
